css/main.css
/* GLOBAL SETTINGS */
* {
scroll-behavior: smooth;
box-sizing: border-box;
/* border: 1px solid white; */
}

html {

  /* FONTS */

  --main-font: Afacad, Afacad-Regular;
  --italic: Afacad-Italic;
  --display-font: RobotoMono;

  --letter-spacing-bigger: -0.4rem;
  --letter-spacing-big: -0.2rem;
  --letter-spacing-medium: -0.05rem;

  font-size: var(--standard-font-size);

  --standard-font-size: 20px;
  --figcaption: 0.7rem;
  --mini: 0.8rem;
  --small: 1.1rem;
  --medium: 1.6rem;
  --big: 4rem;
  --bigger: 6.4rem;
  --massive: 10rem;
  --insane: 16rem;
  

  /* COLORS */
  
  --lila: #B0ADFF;
  --lila-light: #B2B0FF;
  --main-black: #090909;
  --button-black: #171717;
  --main-white: #FFFEFB;
}

/* GENERAL */

body {
  overflow-x: hidden;
  /* disable default values of padding and margin on body */
  padding: 0;
  margin: 0;
  font-family: var(--main-font);
  line-height: 1.5;
  background-color: var(--main-black);
  color: var(--main-white);
  width: 100%;
}

img {
  border-radius: 0.5rem;
}

a {
  color: var(--main-white);
}

h2 {
  font-family: var(--display-font);
  font-size: clamp(var(--medium), calc(2rem + 8vw), var(--bigger));
  line-height: 1.3;
  letter-spacing: clamp(-0.2em, calc(0em + 1vw), 1em);
  text-transform: uppercase;
  font-weight: 900;
  margin-bottom: 5vh;
  margin-top: 1.5em;
}

h2::after {
  content:"_";
  display: inline;
}


h3 {
  font-family: var(--display-font);
  font-size: var(--medium);
  font-weight: 500;
  font-style: normal;
  line-height: 1.1;
  text-transform: uppercase;
}

h4 {
  font-family: var(--display-font);
  font-weight: 400;
  font-size: var(--small);
  text-align: center;
}

p {
  font-weight: 100;
  line-height: 1.5;
  font-size: 1.1rem;
  letter-spacing: 0.03rem;
}

.flex {
  display: flex; 
  flex-direction: column;
  justify-content: center; 
  align-items: center; 
}

.flexrow {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
}

.text {
  font-weight: 100;
  width: min(65ch, 100%);
  color: var(--main-white);
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    text-decoration: none;
  }
  
.plain-background {
  background: var(--main-black);
  width: 100%;
  margin: 0 auto;
}

.stripes {
  background-image: repeating-linear-gradient(45deg, black 0 1px, var(--main-black) 1px 10px);
}

.stripes-up {
    background-image: repeating-linear-gradient(-45deg, black 0 1px, var(--main-black) 1px 10px);
}

.button {
  display: block;
  padding: .7em 2em;
  margin: 5vh 0;
  border-radius: .5rem;
  text-decoration: none;
  font-family: var(--display-font);
  text-align: center;
  transition: .2s ease;
  background-color: var(--main-white);
  color: var(--main-black);
  border: 3px solid var(--main-white);
  font-family: var(--display-font);
}
@media (hover: hover) {
  
  .button:hover {
    background-color: var(--button-black);
    color: var(--main-white);
    border: 3px solid var(--lila);
  }

}

.skofiasko .button {
  margin: 1vh 0 0 0;
}
/* FOOTER */

footer {
  padding: 0 1rem .6rem 1rem;
  margin-top: 1vh;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
}

footer p, footer a {
    font-size: var(--mini);
    color: var(--main-white);
    
} 

footer p {
  text-align: right;
}

p.footerlinks {
  text-align: left;
}

/* TOPBAR */

nav {
  transition: 0.2s ease;
  position: sticky;
  top: 69px;
  width: 100%;
  margin: 0 auto;
  height: 70px;
}

.offscreenmenu {
  display: none;
}

.logobuttonhammenu {
  display: none;
}

.hammenu {
  display: none;
}

.topbar {
  background: var(--main-black);
  display: flex;
  width: 100%;
  height: 70px;
  align-items: center;
  justify-content: space-evenly;
  transition: .2s ease;
  position: absolute;
  bottom: 70px;
}

.topbar a {
  color: var(--main-white);
  font-family: var(--display-font);
  font-weight: 400;
  text-decoration: none;
  text-align: center;
  font-size: var(--small);
  transition: .2s ease-out;
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: inset 0 3px 0 var(--main-black);
}


@media (hover: hover) {
  .topbar a:hover {
    /* color: var(--main-black); */
    /* background: var(--main-white); */
    text-decoration: none;
    box-shadow: inset 0 3px 0 var(--main-white);
    letter-spacing: .1em;
  }
  
  .smalllink:hover {
    text-decoration: none;
  }
}


.logobuttonwhite {
  height: 24px;
  opacity: 1;
  transition: .2s ease-out;
}

.topbar a:hover .logobuttonwhite {
  transform: scaleX(1.125);
}


/* HERO */  

.landing {
  height: 100%;
  width: 100%;
  /* background: linear-gradient(to bottom, #0909098b 77%, transparent 100%); */
  position: absolute;
}  

.logo {
  z-index: 3;
  margin-bottom: 5vh;
  filter: drop-shadow(0px 0px 50px var(--main-black));
  width: min(100%, 1000px);
  transition: filter .2 ease;
}  

@media (hover: hover) {

  .logo:hover {
    filter: drop-shadow(0 0 10px var(--main-white));
  }

}

a[href="#maincontent"] {
  width: min(80%, 1000px);
}



.img-container {
  height: 100vh;
  width: 100%;
  background: url("../img/johnkcay_skofarmerPopfest_2023_24.jpg");
  filter: brightness(1.2);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  position: sticky;
  top: 0vh;
  z-index: -1;
  transition: background-position 1s ease;
}  

.arrow {
  /* display: none; */
  position: absolute;
  bottom: 0vh;
  transform: scaleX(2.5);
  animation: bounce .4s ease-in infinite alternate ;
  cursor: default;
}

@keyframes bounce {
  0% {

  }

  100% {
    transform: scaleX(2.5) translateY(.5rem);
  }
  
}

.arrow p {
  display: none;
  color: var(--main-white);
  background-color: var(--main-black);
  font-size: 2rem;
}

.empty-space {
  height: 100vh;
  width: 100vw;
}  
/* ... */

